syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";

package br.com.zup.edu;

service ChavePixService {
  rpc cadastrar (NovaChavePixRequest) returns (NovaChavePixResponse) {}
}

message NovaChavePixRequest {
  string idErpItau = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;
}

message NovaChavePixResponse {
  string pixId = 1;
}

enum TipoChave {
  TIPO_DESCONHECIDO = 0;
  CPF =1;
  CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}
